--- a/docs/CSS/main.css
+++ b/docs/CSS/main.css
@@ -1,3 +1,7 @@
+a{
+    color:black;
+    text-decoration:none;
+}
 .page {
     font-family: Comic Sans MS, Comic Sans, cursive;
     line-height: 300%;
@@ -79,6 +83,11 @@
 }
 .main-content__rest-user-option {
     height: 32%;
+    color: black;
+    text-decoration: none;
+}
+.main-content__rest-user-option:hover {
+    background-color: #eed7b8;
 }
 .main-content__main-photo {
     grid-area: 1 / 3 / span 3 / span 6;
